# tabi_plan

./: .dockerignore  .env.local  Cargo.toml  Makefile  Makefile.toml  README.md  okteto-pipeline.yml
.github/workflows/: ci.yaml
infra/: Dockerfile
infra/manifests/: deployment.yaml  secrets.yaml  service.yaml
src/: auth.rs  client.rs  config.rs  error.rs  input.rs  main.rs  output.rs  routes.rs  spots.rs
src/fixtures/: directions.json
