[package]
name = "tabi_plan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["headers"] }
clap = { version = "4.3.1", features = ["env", "derive"] }
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
chatgpt_rs = "1.1.6"
once_cell = "1.8"

[profile.release]
strip = true
